_sass/arduboy_games.scss
@import "main.scss";

@media screen and (max-width: 1090px){
  th {
    display: block;
  }
}

.game_record {
 margin: auto;
 width: auto;
 border: 1px solid #00040C;
 padding: 10px;
 color: #00040C;
}

.game_link:link {
  color: #061A3F
}

.game_link:visited {
  color: #7284A3
}

div {
  background-color: #ECECEC;
}

